# RayderX

./: .gitmodules  CMakeLists.txt  README.md
shaders/: bloom.hlsl  bloom_blur.hlsl  bloom_compose.hlsl  bloom_glare_detect.hlsl  brdf.hlsli  color.hlsli  depth_of_field.hlsl  dof_blur.hlsl  dof_coc.hlsl  envmap.hlsl  film_grain.hlsl  film_grain_comp.hlsl  forward.hlsl  forward_eyes_gltf.hlsl  forward_gltf.hlsl  forward_pbr.hlsl  matrix.hlsli  separable_sss.h  separable_sss.hlsl  separable_sss_comp.h  shadowmap.hlsl  sss_comp.hlsl  sss_config.hlsli  tearline.hlsl  thread_group_tiling.hlsl  tonemap.hlsl  tonemap_operators.hlsli
src/: common.cpp  common.h  dds.h  main.cpp  resources.cpp  resources.h  scene.cpp  scene.h  sdkmesh.h  shaders.cpp  shaders.h
